# Local-AI

./: build_llama_jni.sh  local.properties  settings.gradle.kts
.agents/tasks/task-fix-models-and-inference/: 2026-06-30-175549-review.md  context.json  task.json
.agents/tasks/task-fix-models-and-inference/features/: FEAT-001.json  FEAT-002.json
.agents/tasks/task-real-model-download/: 2026-06-30-170015-review.md  2026-06-30-170436-review.md  context.json  task.json
.agents/tasks/task-real-model-download/features/: FEAT-001.json  FEAT-002.json  FEAT-003.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/localai/: LocalAiApplication.kt  MainActivity.kt
app/src/main/java/com/localai/data/engine/: LlamaCppEngineImpl.kt
app/src/main/java/com/localai/data/network/: LlamaCppJniBridge.kt
app/src/main/java/com/localai/data/repository/: AIModelRepositoryImpl.kt
app/src/main/java/com/localai/di/: AppModule.kt  EngineModule.kt  NetworkModule.kt
app/src/main/java/com/localai/domain/engine/: AIModelEngine.kt  GenerationEvent.kt  SpeechToTextEngine.kt  TextToSpeechEngine.kt
app/src/main/java/com/localai/domain/model/: ChatMessage.kt  DownloadState.kt  MessageRole.kt  ModelInfo.kt
app/src/main/java/com/localai/domain/repository/: AIModelRepository.kt
app/src/main/java/com/localai/domain/util/: PromptFormatter.kt  SpecialTokenFilter.kt
app/src/main/java/com/localai/presentation/chat/: ChatScreen.kt  ChatUiState.kt  ChatViewModel.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/res/values/: strings.xml  themes.xml
(+5 files in other folders)
